# internal/app/gophermart/controllers/orders.go
@@ -2,17 +2,19 @@ package controllers
 
 import (
 	"github.com/IgorChicherin/gophermart/internal/app/gophermart/middlewares"
-	"github.com/IgorChicherin/gophermart/internal/app/gophermart/repositories"
+	"github.com/IgorChicherin/gophermart/internal/app/gophermart/usecases"
+	"github.com/ShiraazMoollatjie/goluhn"
 	"github.com/gin-gonic/gin"
+	log "github.com/sirupsen/logrus"
 	"net/http"
 )
 
 type OrdersController struct {
-	UserRepository repositories.UserRepository
+	CreateOrderUseCase usecases.CreateOrderUseCase
 }
 
 func (oc OrdersController) Route(api *gin.RouterGroup) {
-	middleware := middlewares.AuthMiddleware(oc.UserRepository)
+	middleware := middlewares.AuthMiddleware(oc.CreateOrderUseCase.GetUserRepository())
 	orders := api.Group("/user").Use(middleware)
 	{
 		orders.POST("/orders", oc.orderCreate)
@@ -26,12 +28,65 @@ func (oc OrdersController) Route(api *gin.RouterGroup) {
 // @Schemes
 // @Description order create
 // @Tags orders
-// @Accept json
+// @Accept plain
 // @Produce json
-// @Success 200 {json} OK
+// @Success 200,202
+// @Failure 500
+// @Failure 400,401,409,422 {object} models.DefaultErrorResponse
 // @Router /user/orders [post]
 func (oc OrdersController) orderCreate(c *gin.Context) {
-	c.String(http.StatusOK, "OK")
+	b, err := c.GetRawData()
+
+	if err != nil {
+		log.Errorln(err)
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	orderNr := string(b)
+
+	token, err := c.Cookie("token")
+	userRepo := oc.CreateOrderUseCase.GetUserRepository()
+	orderRepo := oc.CreateOrderUseCase.GetOrderRepository()
+
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, map[string]string{"error": "unauthorized user"})
+		return
+	}
+
+	login, _, err := userRepo.DecodeToken(token)
+
+	if err != nil {
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	err = goluhn.Validate(orderNr)
+	if err != nil {
+		c.AbortWithStatus(http.StatusUnprocessableEntity)
+		return
+	}
+
+	hasOrder, err := orderRepo.HasOrder(orderNr)
+
+	if err != nil {
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	if hasOrder {
+		c.AbortWithStatusJSON(http.StatusConflict, map[string]string{"error": "the order has already been created"})
+		return
+	}
+
+	_, err = oc.CreateOrderUseCase.CreateOrder(login, orderNr)
+
+	if err != nil {
+		c.AbortWithStatus(http.StatusInternalServerError)
+		return
+	}
+
+	c.Status(http.StatusOK)
 }
 
 // @BasePath /api
